################################################################################
#                              Quick start guide
################################################################################

#
# This is a main mero makefile. It's responsible for building all user-space
# programs and libraries.
#
# It uses non-recursive make technique which is superior in many aspects to
# "recursive make". For more information on "non-recursive vs. recursive make",
# please refer to an excellent article "Recursive Make Considered Harmful" by
# Peter Miller - http://miller.emu.id.au/pmiller/books/rmch/
#
# A task of building kernel-space modules is delegated to the top-level Kbuild
# makefile, which is automatically invoked by this makefile after user-space
# build is complete.
#
# This makefile uses 'include' directives of make program to source other
# sub-makefiles (Makefile.sub), which are located in subdirectories and
# describe what should be built in each particular subdir.
#
# Normally, sub-makefiles should contain only *_HEADERS, *_SOURCES, EXTRA_DIST,
# CLEANFILES, FF_FILES and XC_FILES variables, plus targets, which describe some
# local dependencies or do some local preparations (like creating symlinks and
# so on).
#
# All other primary variables (in automake sense), like *_PROGRAMS,
# *_LTLIBRARIES, *_CFLAGS, *_LDADD, _LIBADD and global targets should be defined
# in this main makefile.
#
# Mero's public headers should be listed in *_HEADERS variables, while
# internal headers, which are not part of the public interface, should be listed
# in *_SOURCES variables.
#
# In order to allow kernel- and user- space build in the same directories, we
# force renaming of output user-space *.o files by prepending target name;
# automake automatically does this if per-target flags are used.
#


################################################################################
#                            Automake configuration
################################################################################

# control verbosity level of make depending on 'V' command-line argument and
# --enable-silent-rules option of configure script
make_verbose   = $(make_verbose_$(V))
make_verbose_  = $(make_verbose_$(AM_DEFAULT_VERBOSITY))
make_verbose_0 = --no-print-directory

MAKEFLAGS = $(make_verbose)

# in order to suppress annoying automake warning "CFLAGS: non-POSIX variable name"
# -Wno-portability automake option should be set for this makefile, this is
# required for xcode generation
AUTOMAKE_OPTIONS = -Wno-portability

# required to properly rebuild aclocal.m4 macros on configure.ac or Makefile.am
# updates
ACLOCAL_AMFLAGS = -I m4

# default XXXFLAGS, used for preprocessing, compiling and linking for all
# user-space targets
#
# NOTE[1]: automake doesn't use these flags if per-target XXXFLAGS are defined,
#          so if one doesn't want to replace these default AM_XXXFLAGS with
#          per-target XXXFLAGS, but just to extend them, then AM_XXXFLAGS should
#          be appended to a per-target XXXFLAGS:
#
#              my_program_CFLAGS = --some-compiler-option $(AM_CFLAGS)
#
# NOTE[2]: XXXFLAGS variables provided by a user from command-line
#          (like `make CFLAGS=-Werror`) are always used implicitly in
#          automake's build rules, so there is no need to specify them directly
#          in AM_XXXFLAGS or per-target XXXFLAGS variables.
#
AM_CPPFLAGS  = @M0_CPPFLAGS@
AM_CFLAGS    = @M0_CFLAGS@
AM_LDFLAGS   = @M0_LDFLAGS@

GALOIS_DIR   = extra-libs/galois

SUBDIRS = $(GALOIS_DIR)


################################################################################
#                               Global variables
################################################################################

# initialize variables, so values can be appended later with += if needed

bin_PROGRAMS       =
bin_SCRIPTS        =
sbin_PROGRAMS      =
lib_LTLIBRARIES    =

noinst_PROGRAMS    =
noinst_LTLIBRARIES =

man_MANS   =

EXTRA_DIST = autogen.sh mero.spec.in LICENCE .gdbinit extra-libs/.gitignore
CLEANFILES =
DISTCLEANFILES = @LUSTRE_CONFIG_LINK@ utils/ub.sh
MAN_PAGES  =
POD_MAN_PAGES  =

# a list of auto-generated *_ff.[hc] files
FF_FILES =

# a list of auto-generated *_xc.[hc] files
XC_FILES =

# name of autogenerated file to track which autogenerated FF files to clean
FF_CLEAN_FILE := .ff.c

# name of autogenerated file to track dependencies between XC .h files
XC_DEPS_FILE  := .xc.d
XC_CLEAN_FILE := .xc.c

# path to a directory with built linux kernel sources/headers
KDIR = @LINUX_OBJ@


################################################################################
#                     Internal programs required for build
################################################################################

#
# ff2c
#

FF2C = $(top_builddir)/xcode/ff2c/ff2c

noinst_PROGRAMS          += xcode/ff2c/ff2c
xcode_ff2c_ff2c_CPPFLAGS  = -DM0_TARGET='ff2c' $(AM_CPPFLAGS)
xcode_ff2c_ff2c_LDADD     = xcode/ff2c/libmero-xcode-ff2c.la

# a separate ff2c library is required in order to test it in UT
noinst_LTLIBRARIES += xcode/ff2c/libmero-xcode-ff2c.la

xcode_ff2c_libmero_xcode_ff2c_la_CPPFLAGS = -DM0_TARGET='libmero-xcode-ff2c' \
                                            $(AM_CPPFLAGS)

include $(top_srcdir)/xcode/ff2c/Makefile.sub


################################################################################
#                                  Libraries
################################################################################

#
# libmero.so
#

lib_LTLIBRARIES          += mero/libmero.la
mero_libmero_la_CPPFLAGS  = -DM0_TARGET='libmero' $(AM_CPPFLAGS)
mero_libmero_la_LDFLAGS   = -release @LT_RELEASE@ -pthread $(AM_LDFLAGS)
mero_libmero_la_LIBADD    = @MATH_LIBS@ @PTHREAD_LIBS@ @AIO_LIBS@ @RT_LIBS@ \
                            @DB_LIBS@ @GALOIS_LIBS@ @YAML_LIBS@ @PROFILER_LIBS@ \
			    @UUID_LIBS@

# install directory for public libmero headers
mero_includedir             = $(includedir)/mero

# these variables are populated in the Makefile.sub files of each mero module,
# which are then included into this top-level makefile
nobase_mero_include_HEADERS =
mero_libmero_la_SOURCES  =

include $(top_srcdir)/addb/Makefile.sub
include $(top_srcdir)/balloc/Makefile.sub
include $(top_srcdir)/be/Makefile.sub
include $(top_srcdir)/capa/Makefile.sub
include $(top_srcdir)/cfg/Makefile.sub
include $(top_srcdir)/cm/Makefile.sub
include $(top_srcdir)/cob/Makefile.sub
include $(top_srcdir)/conf/Makefile.sub
include $(top_srcdir)/conf/objs/Makefile.sub
include $(top_srcdir)/console/Makefile.sub
include $(top_srcdir)/db/Makefile.sub
include $(top_srcdir)/desim/Makefile.sub
include $(top_srcdir)/dtm/Makefile.sub
include $(top_srcdir)/fid/Makefile.sub
include $(top_srcdir)/fol/Makefile.sub
include $(top_srcdir)/fop/Makefile.sub
include $(top_srcdir)/ha/Makefile.sub
include $(top_srcdir)/ioservice/Makefile.sub
include $(top_srcdir)/layout/Makefile.sub
include $(top_srcdir)/lib/Makefile.sub
include $(top_srcdir)/m0t1fs/Makefile.sub
include $(top_srcdir)/mdservice/Makefile.sub
include $(top_srcdir)/mdstore/Makefile.sub
include $(top_srcdir)/mero/Makefile.sub
include $(top_srcdir)/mgmt/Makefile.sub
#XXX_BE_DB include $(top_srcdir)/mw/Makefile.sub
include $(top_srcdir)/net/Makefile.sub
include $(top_srcdir)/net/bulk_emulation/Makefile.sub
include $(top_srcdir)/net/lnet/Makefile.sub
include $(top_srcdir)/pool/Makefile.sub
include $(top_srcdir)/reqh/Makefile.sub
include $(top_srcdir)/rm/Makefile.sub
include $(top_srcdir)/rpc/Makefile.sub
include $(top_srcdir)/sm/Makefile.sub
include $(top_srcdir)/sns/Makefile.sub
include $(top_srcdir)/sns/cm/Makefile.sub
include $(top_srcdir)/sns/cm/repair/Makefile.sub
include $(top_srcdir)/sns/cm/rebalance/Makefile.sub
include $(top_srcdir)/stob/Makefile.sub
include $(top_srcdir)/stats/Makefile.sub
include $(top_srcdir)/udb/Makefile.sub
include $(top_srcdir)/xcode/Makefile.sub

#
# libmero-ut.so
#

if ENABLE_UNIT_TESTS
noinst_LTLIBRARIES        += ut/libmero-ut.la
endif
ut_libmero_ut_la_CPPFLAGS  = -DM0_TARGET='libmero-ut' $(AM_CPPFLAGS)
ut_libmero_ut_la_LIBADD    = @CUNIT_LIBS@

ut_libmero_ut_la_SOURCES   =

include $(top_srcdir)/addb/ut/Makefile.sub
include $(top_srcdir)/balloc/ut/Makefile.sub
include $(top_srcdir)/be/ut/Makefile.sub
include $(top_srcdir)/capa/ut/Makefile.sub
include $(top_srcdir)/cm/ut/Makefile.sub
include $(top_srcdir)/cob/ut/Makefile.sub
include $(top_srcdir)/conf/ut/Makefile.sub
include $(top_srcdir)/console/ut/Makefile.sub
include $(top_srcdir)/db/ut/Makefile.sub
include $(top_srcdir)/dtm/ut/Makefile.sub
include $(top_srcdir)/fol/ut/Makefile.sub
include $(top_srcdir)/fop/ub/Makefile.sub
include $(top_srcdir)/fop/ut/Makefile.sub
include $(top_srcdir)/ioservice/ut/Makefile.sub
include $(top_srcdir)/layout/ut/Makefile.sub
include $(top_srcdir)/lib/ut/Makefile.sub
include $(top_srcdir)/mdservice/ut/Makefile.sub
include $(top_srcdir)/mero/ut/Makefile.sub
include $(top_srcdir)/mgmt/svc/ut/Makefile.sub
include $(top_srcdir)/mgmt/ut/Makefile.sub
include $(top_srcdir)/net/bulk_emulation/ut/Makefile.sub
include $(top_srcdir)/net/lnet/ut/Makefile.sub
include $(top_srcdir)/net/test/ut/Makefile.sub
include $(top_srcdir)/net/ut/Makefile.sub
include $(top_srcdir)/pool/ut/Makefile.sub
include $(top_srcdir)/reqh/ut/Makefile.sub
include $(top_srcdir)/rm/ut/Makefile.sub
include $(top_srcdir)/rpc/ub/Makefile.sub
include $(top_srcdir)/rpc/ut/Makefile.sub
include $(top_srcdir)/sm/ut/Makefile.sub
include $(top_srcdir)/sns/cm/repair/ut/Makefile.sub
include $(top_srcdir)/sns/ut/Makefile.sub
include $(top_srcdir)/stob/ut/Makefile.sub
include $(top_srcdir)/stats/ut/Makefile.sub
include $(top_srcdir)/udb/ut/Makefile.sub
include $(top_srcdir)/ut/Makefile.sub
include $(top_srcdir)/xcode/ut/Makefile.sub

#
# libmero-net-test.so
#

if ENABLE_UNIT_TESTS
noinst_LTLIBRARIES += net/test/libmero-net-test.la
endif
net_test_libmero_net_test_la_CPPFLAGS = -DM0_TARGET='libmero-net-test' $(AM_CPPFLAGS)

net_test_libmero_net_test_la_SOURCES =

include $(top_srcdir)/net/test/Makefile.sub

#
# libmero-altogether.so
#

MERO_ALTOGETHER_USER_C   = mero/mero_altogether_user.c
MERO_ALTOGETHER_USER_SRC = $(filter %.c,$(mero_libmero_la_SOURCES))

if ENABLE_MERO_ALTOGETHER
lib_LTLIBRARIES += mero/libmero-altogether.la
endif

mero_libmero_altogether_la_SOURCES  = $(MERO_ALTOGETHER_USER_C)

mero_libmero_altogether_la_CPPFLAGS = $(AM_CPPFLAGS) \
                                      -DM0_TARGET='libmero-altogether' \
                                      -UM0_INTERNAL \
                                      -DM0_INTERNAL=static \
                                      -UM0_EXTERN \
                                      -DM0_EXTERN=static \
                                      -DM0_ADDB_CT_CREATE_DEFINITION \
                                      -DM0_ADDB_RT_CREATE_DEFINITION

if ENABLE_DEBUG
mero_libmero_altogether_la_CFLAGS   = $(AM_CFLAGS) \
                                            -Wno-unused-function
else
mero_libmero_altogether_la_CFLAGS   = $(AM_CFLAGS) \
                                            -Wno-unused-function \
                                            -O3 -ffast-math
endif

mero_libmero_altogether_la_LDFLAGS  = $(mero_libmero_la_LDFLAGS)
mero_libmero_altogether_la_LIBADD   = $(mero_libmero_la_LIBADD)

CLEANFILES += $(MERO_ALTOGETHER_USER_C)

################################################################################
#                          Unit tests and benchmarks
################################################################################

#
# balloc/ut
#

#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS                  += balloc/ut/m0blkformat
#XXX_BE_DB endif
#XXX_BE_DB balloc_ut_m0blkformat_CPPFLAGS    = -DM0_TARGET='m0blkformat' $(AM_CPPFLAGS)
#XXX_BE_DB balloc_ut_m0blkformat_LDADD       = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                                     $(top_builddir)/ut/libmero-ut.la
#XXX_BE_DB
#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS                  += balloc/ut/m0blkfree
#XXX_BE_DB endif
#XXX_BE_DB balloc_ut_m0blkfree_CPPFLAGS      = -DM0_TARGET='m0blkfree' $(AM_CPPFLAGS)
#XXX_BE_DB balloc_ut_m0blkfree_LDADD         = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                                     $(top_builddir)/ut/libmero-ut.la
#XXX_BE_DB
#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS                  += balloc/ut/m0blkdump
#XXX_BE_DB endif
#XXX_BE_DB balloc_ut_m0blkdump_CPPFLAGS      = -DM0_TARGET='m0blkdump' $(AM_CPPFLAGS)
#XXX_BE_DB balloc_ut_m0blkdump_LDADD         = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                                     $(top_builddir)/ut/libmero-ut.la
#XXX_BE_DB
#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS                  += balloc/ut/perf
#XXX_BE_DB endif
#XXX_BE_DB balloc_ut_perf_CPPFLAGS           = -DM0_TARGET='balloc-perf' $(AM_CPPFLAGS)
#XXX_BE_DB balloc_ut_perf_LDADD              = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                                     $(top_builddir)/ut/libmero-ut.la
#XXX_BE_DB
#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS                  += balloc/ut/mperf
#XXX_BE_DB endif
#XXX_BE_DB balloc_ut_mperf_CPPFLAGS          = -DM0_TARGET='mperf' $(AM_CPPFLAGS)
#XXX_BE_DB balloc_ut_mperf_LDADD             = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                                     $(top_builddir)/ut/libmero-ut.la
#XXX_BE_DB
#XXX_BE_DB #
#XXX_BE_DB # m0t1fs/linux_kernel/ut
#XXX_BE_DB #
#XXX_BE_DB
#XXX_BE_DB include $(top_srcdir)/m0t1fs/linux_kernel/ut/Makefile.sub
#XXX_BE_DB
#XXX_BE_DB #
#XXX_BE_DB # db/ut
#XXX_BE_DB #
#XXX_BE_DB
#XXX_BE_DB if ENABLE_UNIT_TESTS
#XXX_BE_DB noinst_PROGRAMS      += db/ut/elist
#XXX_BE_DB endif
#XXX_BE_DB db_ut_elist_CPPFLAGS  = -DM0_TARGET='elist' $(AM_CPPFLAGS)
#XXX_BE_DB db_ut_elist_LDADD     = $(top_builddir)/mero/libmero.la \
#XXX_BE_DB                         $(top_builddir)/ut/libmero-ut.la

#
# desim/ut
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS            += desim/ut/net_test
endif
desim_ut_net_test_CPPFLAGS  = -DM0_TARGET='net_test' $(AM_CPPFLAGS)
desim_ut_net_test_LDADD     = $(top_builddir)/mero/libmero.la \
                              $(top_builddir)/ut/libmero-ut.la

if ENABLE_UNIT_TESTS
noinst_PROGRAMS            += desim/ut/chs_test
endif
desim_ut_chs_test_CPPFLAGS  = -DM0_TARGET='chs_test' $(AM_CPPFLAGS)
desim_ut_chs_test_LDADD     = $(top_builddir)/mero/libmero.la \
                              $(top_builddir)/ut/libmero-ut.la

if ENABLE_UNIT_TESTS
noinst_PROGRAMS               += desim/ut/m0t1fs_test
endif
desim_ut_m0t1fs_test_CPPFLAGS  = -DM0_TARGET='m0t1fs_test' $(AM_CPPFLAGS)
desim_ut_m0t1fs_test_LDADD     = $(top_builddir)/mero/libmero.la \
                                 $(top_builddir)/ut/libmero-ut.la

#
# layout/ut
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS             += layout/ut/m0layout
endif
layout_ut_m0layout_CPPFLAGS  = -DM0_TARGET='m0layout' $(AM_CPPFLAGS)
layout_ut_m0layout_LDADD     = $(top_builddir)/mero/libmero.la \
                               $(top_builddir)/ut/libmero-ut.la

#
# net/lnet/ut
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS                 += net/lnet/ut/lut_helper
endif
net_lnet_ut_lut_helper_CPPFLAGS  = -DM0_TARGET='lut_helper' $(AM_CPPFLAGS)
net_lnet_ut_lut_helper_LDADD     = $(top_builddir)/mero/libmero.la \
                                   $(top_builddir)/ut/libmero-ut.la

#
# utils/ut and utils/ub
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS   += utils/ut
endif
utils_ut_CPPFLAGS  = -DM0_TARGET='ut' $(AM_CPPFLAGS)
utils_ut_LDADD     = $(top_builddir)/ut/libmero-ut.la \
                     $(top_builddir)/mero/libmero.la \
                     $(top_builddir)/net/test/libmero-net-test.la \
                     $(top_builddir)/xcode/ff2c/libmero-xcode-ff2c.la

if ENABLE_UNIT_TESTS
noinst_PROGRAMS   += utils/ub
endif
utils_ub_CPPFLAGS  = -DM0_TARGET='ub' $(AM_CPPFLAGS)
utils_ub_LDADD     = $(top_builddir)/mero/libmero.la \
                     $(top_builddir)/ut/libmero-ut.la

include $(top_srcdir)/utils/Makefile.sub


################################################################################
#                    Integration and system test utilities
################################################################################

#
# rpc/it/m0rpcping
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS           += rpc/it/m0rpcping
endif
rpc_it_m0rpcping_CPPFLAGS  = -DM0_TARGET='m0rpcping' $(AM_CPPFLAGS)
rpc_it_m0rpcping_LDADD     = $(top_builddir)/mero/libmero.la  \
                             $(top_builddir)/ut/libmero-ut.la

if ENABLE_UNIT_TESTS
if ENABLE_MERO_ALTOGETHER
noinst_PROGRAMS                     += rpc/it/m0rpcping-altogether
endif
endif

rpc_it_m0rpcping_altogether_CPPFLAGS = -DM0_TARGET='m0rpcping-altogether' $(AM_CPPFLAGS)
rpc_it_m0rpcping_altogether_SOURCES  = $(rpc_it_m0rpcping_SOURCES)
rpc_it_m0rpcping_altogether_LDADD    = $(top_builddir)/mero/libmero-altogether.la \
                                       ut/ut_libmero_ut_la-cs_service.lo \
                                       ut/ut_libmero_ut_la-cs_fop_foms.lo \
                                       ut/ut_libmero_ut_la-cs_fop_foms_xc.lo

include $(top_srcdir)/rpc/it/Makefile.sub

#
# console/st
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS            += console/st/server
endif
console_st_server_CPPFLAGS  = -DM0_TARGET='console-st-server' $(AM_CPPFLAGS)
console_st_server_LDADD     = $(top_builddir)/mero/libmero.la \
                              $(top_builddir)/ut/libmero-ut.la

#
# net/bulk_emulation/st
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS                           += net/bulk_emulation/st/m0bulkping
endif
net_bulk_emulation_st_m0bulkping_CPPFLAGS  = -DM0_TARGET='m0bulkping' $(AM_CPPFLAGS)
net_bulk_emulation_st_m0bulkping_LDADD     = $(top_builddir)/mero/libmero.la \
                                             $(top_builddir)/ut/libmero-ut.la

include $(top_srcdir)/net/bulk_emulation/st/Makefile.sub

#
# net/lnet/st
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS                 += net/lnet/st/m0lnetping
endif
net_lnet_st_m0lnetping_CPPFLAGS  = -DM0_TARGET='m0lnetping' $(AM_CPPFLAGS)
net_lnet_st_m0lnetping_LDADD     = $(top_builddir)/mero/libmero.la \
                                   $(top_builddir)/ut/libmero-ut.la


include $(top_srcdir)/net/lnet/st/Makefile.sub

#
# net/test
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS                         += net/test/user_space/m0nettest
endif
net_test_user_space_m0nettest_CPPFLAGS   = -DM0_TARGET='m0nettest' $(AM_CPPFLAGS)
net_test_user_space_m0nettest_LDADD      = $(top_builddir)/mero/libmero.la \
                                           $(top_builddir)/net/test/libmero-net-test.la

if ENABLE_UNIT_TESTS
noinst_PROGRAMS                         += net/test/user_space/m0nettestd
endif
net_test_user_space_m0nettestd_CPPFLAGS  = -DM0_TARGET='m0nettestd' $(AM_CPPFLAGS)
net_test_user_space_m0nettestd_LDADD     = $(top_builddir)/mero/libmero.la \
                                           $(top_builddir)/net/test/libmero-net-test.la

include $(top_srcdir)/net/test/user_space/Makefile.sub

#
# sns/cm/st
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS             += sns/cm/st/m0repair
endif
sns_cm_st_m0repair_CPPFLAGS  = -DM0_TARGET='m0repair' $(AM_CPPFLAGS)
sns_cm_st_m0repair_LDADD     = $(top_builddir)/mero/libmero.la \
                               $(top_builddir)/ut/libmero-ut.la

include $(top_srcdir)/sns/cm/st/Makefile.sub

#
# utils/ploss
#

if ENABLE_UNIT_TESTS
noinst_PROGRAMS               += utils/ploss/m0plossd
endif
utils_ploss_m0plossd_CPPFLAGS  = -DM0_TARGET='m0plossd' $(AM_CPPFLAGS)

if ENABLE_UNIT_TESTS
noinst_PROGRAMS               += utils/ploss/m0ploss
endif
utils_ploss_m0ploss_CPPFLAGS   = -DM0_TARGET='m0ploss' $(AM_CPPFLAGS)

include $(top_srcdir)/utils/ploss/Makefile.sub

#
# utils/trace
#

bin_SCRIPTS                   += utils/trace/m0trace

bin_PROGRAMS                  += utils/trace/m0tracedump
utils_trace_m0tracedump_LDADD  = $(top_builddir)/mero/libmero.la

bin_PROGRAMS                  += utils/trace/m0traced
utils_trace_m0traced_LDADD     = $(top_builddir)/mero/libmero.la

include $(top_srcdir)/utils/trace/Makefile.sub

#
# m0t1fs/linux_kernel/st
#

include $(top_srcdir)/m0t1fs/linux_kernel/st/Makefile.sub


################################################################################
#                               Public utilities
################################################################################

#
# mero/m0d
#

bin_PROGRAMS     += mero/m0d
mero_m0d_CPPFLAGS  = -DM0_TARGET='m0d' $(AM_CPPFLAGS)
mero_m0d_LDADD     = $(top_builddir)/mero/libmero.la

#
# mero/m0d-altogether
#

if ENABLE_MERO_ALTOGETHER
bin_PROGRAMS  += mero/m0d-altogether
endif

mero_m0d_altogether_CPPFLAGS = -DM0_TARGET='m0d-altogether' $(AM_CPPFLAGS)
mero_m0d_altogether_SOURCES  = $(mero_m0d_SOURCES)
mero_m0d_altogether_LDADD    = $(top_builddir)/mero/libmero-altogether.la

#XXX_BE_DB #
#XXX_BE_DB # console/bin/m0console
#XXX_BE_DB #
#XXX_BE_DB
#XXX_BE_DB sbin_PROGRAMS                  += console/bin/m0console
#XXX_BE_DB console_bin_m0console_CPPFLAGS  = -DM0_TARGET='m0console' $(AM_CPPFLAGS)
#XXX_BE_DB console_bin_m0console_LDADD     = $(top_builddir)/mero/libmero.la
#XXX_BE_DB
#XXX_BE_DB include $(top_srcdir)/console/bin/Makefile.sub

#
# pool
#

bin_PROGRAMS             += pool/m0poolmach
pool_m0poolmach_CPPFLAGS  = -DM0_TARGET='m0poolmach' $(AM_CPPFLAGS)
pool_m0poolmach_LDADD     = $(top_builddir)/mero/libmero.la

#
# addb/dump
#

sbin_PROGRAMS                 += addb/dump/m0addbdump
addb_dump_m0addbdump_CPPFLAGS  = -DM0_TARGET='m0addbdump' $(AM_CPPFLAGS)
addb_dump_m0addbdump_LDADD     = $(top_builddir)/mero/libmero.la

include $(top_srcdir)/addb/dump/Makefile.sub

#XXX_BE_DB #
#XXX_BE_DB # mgmt/ctl/m0ctl
#XXX_BE_DB # (This is unrelated to utils/linux_kernel/ctl.c).
#XXX_BE_DB #
#XXX_BE_DB
#XXX_BE_DB bin_PROGRAMS               += mgmt/ctl/m0ctl
#XXX_BE_DB mgmt_ctl_m0ctl_LDADD        = $(top_builddir)/mero/libmero.la
#XXX_BE_DB
#XXX_BE_DB include $(top_srcdir)/mgmt/ctl/Makefile.sub

#
# stats/util/m0stats
#

bin_PROGRAMS               += stats/util/m0stats
stats_util_m0stats_LDADD    = $(top_builddir)/mero/libmero.la

include $(top_srcdir)/stats/util/Makefile.sub


################################################################################
#                        Init scripts and config files
################################################################################

initddir = $(sysconfdir)/rc.d/init.d
initd_SCRIPTS = mero/mero


################################################################################
#                                     Misc
################################################################################

include $(top_srcdir)/scripts/Makefile.sub
include $(top_srcdir)/patches/Makefile.sub
include $(top_srcdir)/doc/Makefile.sub


################################################################################
#                                 Build rules
################################################################################

#
# ff files
#

# rules for *_ff.[ch] files, which are automatically generated from
# corresponding *.ff files by ff2c compiler.

# hide actual ff2c build command in silent make mode (V=0) and display it
# otherwise (V=1); take into account default verbosity level in configure
# (controlled by --enable-silent-rules option)
ff2c_verbose   = $(ff2c_verbose_$(V))
ff2c_verbose_  = $(ff2c_verbose_$(AM_DEFAULT_VERBOSITY))
ff2c_verbose_0 = @echo "  FF2C  " $<;

#$(top_srcdir)/%_ff.h $(top_srcdir)/%_ff.c: $(top_srcdir)/%.ff $(FF2C)
%_ff.h %_ff.c: %.ff $(FF2C)
	$(ff2c_verbose)$(FF2C) $<

#
# xc files
#

# rules for *_xc.[hc] files, which are automatically generated from
# corresponding *.h files.

# *_xc.[ch] files contain generated xcode data structures for the given C
# structures from *.h files. For more information about xcode please refer to
# xcode/xcode.h and xcode/gccxml2xcode documentation.

# hide actual gccxml/gccxml2xcode build commands in silent make mode (V=0) and
# display them otherwise (V=1); take into account default verbosity level in
# configure (controlled by --enable-silent-rules option)
gccxml_verbose   = $(gccxml_verbose_$(V))
gccxml_verbose_  = $(gccxml_verbose_$(AM_DEFAULT_VERBOSITY))
gccxml_verbose_0 = @echo " GCCXML    " $@;

gccxml2xcode_verbose   = $(gccxml2xcode_verbose_$(V))
gccxml2xcode_verbose_  = $(gccxml2xcode_verbose_$(AM_DEFAULT_VERBOSITY))
gccxml2xcode_verbose_0 = @echo " GCCXML2XC " $@;

# gccxml doesn't like -Werror and --coverage options so we need to remove them
# from CFLAGS

GCCXML_UNSUPPORTED_CFLAGS := -Werror --coverage -pipe -Wp,-D_FORTIFY_SOURCE=2 --param=ssp-buffer-size=4
GCCXML_CFLAGS := $(filter-out $(GCCXML_UNSUPPORTED_CFLAGS), $(CPPFLAGS) $(CFLAGS) $(AM_CPPFLAGS) $(AM_CFLAGS))

%_xc.h %_xc.c: %.h
	$(gccxml_verbose)$(GCCXML) $(GCCXML_CFLAGS) -fxml=$(<:.h=.gccxml) $<
	$(gccxml2xcode_verbose)$(top_srcdir)/xcode/gccxml2xcode -i $(<:.h=.gccxml)


#
# Pre-build targets
#

# BUILT_SOURCES automake variable is a standard way to execute commands
# before the main build commands (`make all`), for more information please
# refer to section "Built Sources" in automake documentation
BUILT_SOURCES = pre-all

# this is executed just before 'all' target
.PHONY: pre-all
pre-all: check-sources-prebuild
	$(MAKE) generate-files

.PHONY: check-sources-prebuild
check-sources-prebuild:
	@echo -n 'Checking source files... '
	@$(top_srcdir)/scripts/check-sources --noisy $(top_srcdir)
	@echo 'OK'

-include $(XC_DEPS_FILE)

$(XC_DEPS_FILE): $(XC_FILES:_xc.h=.h)
	@rm -f $(XC_DEPS_FILE)
	@for f in $(XC_FILES:_xc.h=.h); do \
		deps=$$( \
			$(CPP) -MM -MG $(AM_CPPFLAGS) $$f \
			| tr ' ' \\n \
			| grep _xc \
			| grep -v $${f/%.h/_xc.h} \
			| sed -e 's#^$(abs_top_srcdir)/##' \
			| xargs echo \
		       ); \
		if [ -n "$$deps" ]; then \
			echo "$${f/%.h/_xc.h}: $$deps" >> $(XC_DEPS_FILE); \
			echo >> $(XC_DEPS_FILE); \
		fi \
	 done

.PHONY: generate-xc-deps
generate-xc-deps: $(XC_DEPS_FILE)

-include $(XC_CLEAN_FILE)

$(XC_CLEAN_FILE):
	@rm -f $(XC_CLEAN_FILE)
	@for f in $(XC_FILES); do \
		echo "CLEANFILES += $${f} $${f/%.h/.c} $${f/%_xc.h/.gccxml}" \
		     >> $(XC_CLEAN_FILE); \
	 done

.PHONY: generate-xc-clean
generate-xc-clean: $(XC_CLEAN_FILE)

.PHONY: generate-files
generate-files: generate-xc-files generate-ff-files

-include $(FF_CLEAN_FILE)

$(FF_CLEAN_FILE):
	@rm -f $(FF_CLEAN_FILE)
	@for f in $(FF_FILES); do \
		echo "CLEANFILES += $${f} $${f/%.h/.c}" >> $(FF_CLEAN_FILE); \
	 done

.PHONY: generate-ff-clean
generate-ff-clean: $(FF_CLEAN_FILE)

.PHONY: generate-ff-files
generate-ff-files: $(FF_FILES)

.PHONY: generate-xc-files
generate-xc-files: $(XC_FILES)

#
# Post-build targets
#

# this is executed just after 'all' target
all-local: build-kernel-modules $(LTLIBRARIES) $(PROGRAMS)
	@$(top_srcdir)/scripts/check-sources $(top_srcdir)
	@$(top_srcdir)/scripts/check-public-api
	@$(top_srcdir)/scripts/print-elf-sizes

.PHONY: check-sources-postbuild
check-sources-postbuild:
	@$(top_srcdir)/scripts/check-sources $(top_srcdir)

.PHONY: check-public-api
check-public-api:
	@$(top_srcdir)/scripts/check-public-api

.PHONY: print-elf-sizes
print-elf-sizes:
	@$(top_srcdir)/scripts/print-elf-sizes

# kbuild system will complain about dupicate exported symbols in m0mero-ut.ko,
# because it uses the same .o files as m0mero.ko, so we're filtering such kbuild
# warnings out from make output with `grep -v` to avoid extra noise;
# we're using special feature of bash shell called "Process  substitution", to
# redirect STDERR output of make command to a filter command, this is required
# in order to preserve exit code of make command, which would be lost in case of
# plain piping with "|", and as a bonus it keeps STDOUT and STDERR separate.
.PHONY: build-kernel-modules
build-kernel-modules:
	@echo "$(MAKE) -C $(KDIR) M=$(abs_top_builddir) $(AM_MAKEFLAGS)"
	@$(BASH) -c "$(MAKE) -C $(KDIR) M=$(abs_top_builddir) $(AM_MAKEFLAGS) \
	 2> >( grep -v '^WARNING:.*exported twice\. Previous export was in' )"

#
# Convenient targets for separate components
#

# all-user

.PHONY: all-user
all-user: pre-all
	@$(MAKE) $(AM_MAKEFLAGS) __all-user

.PHONY: __all-user
__all-user: config.h Makefile $(LTLIBRARIES) $(PROGRAMS) $(HEADERS)

# all-kernel

.PHONY: all-kernel
all-kernel: pre-all
	@$(MAKE) $(AM_MAKEFLAGS) build-kernel-modules

# libmero

.PHONY: libmero
libmero: pre-all
	@$(MAKE) $(AM_MAKEFLAGS) __libmero

.PHONY: __libmero
__libmero: config.h Makefile mero/libmero.la $(HEADERS)

# libmero-altogether

$(MERO_ALTOGETHER_USER_C): $(MERO_ALTOGETHER_USER_SRC)
	@echo "/* This file is autogenerated, don't edit. */" > $(MERO_ALTOGETHER_USER_C)
	@for f in $^; do \
		echo "#include \"$$f\"" >> $(MERO_ALTOGETHER_USER_C); \
	done

.PHONY: libmero-altogether
libmero-altogether: pre-all
	@$(MAKE) $(AM_MAKEFLAGS) __libmero-altogether

.PHONY: __libmero-altogether
__libmero-altogether: config.h Makefile mero/libmero-altogether.la $(HEADERS)

# libmero-ut

.PHONY: libmero-ut
libmero-ut: pre-all
	@$(MAKE) $(AM_MAKEFLAGS) __libmero-ut

.PHONY: __libmero-ut
__libmero-ut: config.h Makefile ut/libmero-ut.la $(HEADERS)

# galois

.PHONY: galois
galois:
	@echo 'Building galois'
	@cd $(GALOIS_DIR) && $(MAKE) $(AM_MAKEFLAGS)

# quick

.PHONY: quick
quick: generate-files galois
	@echo 'Building user-space Unit Tests'
	@$(MAKE) $(AM_MAKEFLAGS) __quick

.PHONY: __quick
__quick: __libmero __libmero-ut utils/ut
	@$(MAKE) $(AM_MAKEFLAGS) build-kernel-modules M0_BUILD_KERNEL_M0MERO_ONLY=yes

# kuick

.PHONY: kuick
kuick: generate-files galois
	@echo 'Building kernel-space Unit Tests'
	@$(MAKE) $(AM_MAKEFLAGS) build-kernel-modules M0_BUILD_KERNEL_UT_ONLY=yes

#
# Clean targets
#

clean-local: clean-kernel-modules clean-doc
	@rm -vf $(XC_DEPS_FILE)
	@rm -vf $(XC_CLEAN_FILE)
	@rm -vf $(FF_CLEAN_FILE)
	@rm -vf m0.trace.*
	@if test x@ENABLE_COVERAGE@ = xyes; then \
		find . -name "*.gcno" | xargs rm -vf; \
	fi

# we don't want to use the default kernel clean command, i.e.:
#   $(MAKE) -C $(KDIR) M=$(PWD) $(AM_MAKEFLAGS) clean
# because it's a bit dummy - it uses `find` to recursively delete all *.o, *.a
# and *.ko files, which will mess up our user-space build in .libs/ directories
# and delete library files under extra-libs/ and galois.ko module;
# instead we use our own `find` command, which excludes some paths we need to
# keep, to clean up kernel build
.PHONY: clean-kernel-modules
clean-kernel-modules:
	@rm -vrf $(top_builddir)/.tmp_versions/
	@rm -vf $(top_builddir)/Module.symvers
	@rm -vf $(top_builddir)/Module.markers
	@rm -vf $(top_builddir)/modules.order
	@find $(top_builddir) \
		\( -name .git -o -name .libs -o -name extra-libs \) -prune \
		-o \( -name '*.o' -o -name '*.ko' -o -name '.*.cmd' \
		      -o -name '*.ko.*' -o -name '.*.d' -o -name '.*.tmp' \
		      -o -name '*.mod.c' \
		   \) -type f -print | xargs rm -vf

.PHONY: clean-doc
clean-doc:
	rm -fr doc/html
	rm -f  doc/man/*.[1-8].xml
	rm -f  doc/man/*.[1-8]
	rm -f  $(POD_MAN_PAGES_RAW)

#
# Install targets
#

# we want to install mero kernel modules in kernel/fs/mero directory under
# base kernel modules dir, and since our "installable" kernel modules already
# built in mero/ directory, Kbuild will append it to install path, so we use
# INSTALL_MOD_DIR=kernel/fs to avoid duplication of mero/ part in our module's
# installation path

install-exec-local:
	@$(MAKE) INSTALL_MOD_PATH=$(DESTDIR) INSTALL_MOD_DIR=kernel/fs \
			 -C $(KDIR) M=$(abs_top_builddir) modules_install

# rpmbuild needs a dist archive with sources to build rpm, by default it
# searches it in ~/rpmbuild/SOURCES/ directory, but we are telling rpmbuild to
# look in the current dir first, where we create our mero-0.1.0.tar.gz dist
# archive with `make dist` command
.PHONY: rpms
rpms:
	$(MAKE) dist
	rpmbuild --define "_sourcedir $$(pwd)" -bb mero.spec

#
# Documentation
#

# doxygen

.PHONY: doc-doxygen
doc-doxygen:
	@$(DOXYGEN) doc/Doxyfile

# man

MAN_PAGES_DIR = doc/man
MAN_PAGES_RAW = $(MAN_PAGES:.txt=)
POD_MAN_PAGES_RAW = $(POD_MAN_PAGES:=.1) #$(patsubst %,$(MAN_PAGES_DIR)/%.1, $(notdir $(POD_MAN_PAGES)))

man_MANS += $(MAN_PAGES_RAW) $(POD_MAN_PAGES_RAW)

# hide actual a2x build command in silent make mode (V=0) and display it
# otherwise (V=1); this takes into account default verbosity level in configure
# (controlled by --enable-silent-rules option)
a2x_verbose   = $(a2x_verbose_$(V))
a2x_verbose_  = $(a2x_verbose_$(AM_DEFAULT_VERBOSITY))
a2x_verbose_0 = @echo "  A2X   " $@;

$(MAN_PAGES_RAW):
	$(a2x_verbose)$(A2X) --format=manpage $@.txt

# hide actual pod2man build command in silent make mode (V=0) and display it
# otherwise (V=1); this takes into account default verbosity level in configure
# (controlled by --enable-silent-rules option)
pod2man_verbose   = $(pod2man_verbose_$(V))
pod2man_verbose_  = $(pod2man_verbose_$(AM_DEFAULT_VERBOSITY))
pod2man_verbose_0 = @echo " POD2MAN" $@;

$(POD_MAN_PAGES_RAW):
	$(pod2man_verbose)$(POD2MAN) --section=1 --center='Mero User Manual' \
	--release=@PACKAGE_VERSION@ --utf8 $(@:.1=) $@

.PHONY: doc-manpages
doc-manpages: $(MAN_PAGES_RAW) $(POD_MAN_PAGES_RAW)


.PHONY: doc
doc: doc-doxygen doc-manpages

#
# Misc targets
#

.PHONY: etags
etags:
	find . -name '*.[ch]' | xargs etags

.PHONY: list-programs
list-programs:
	@for p in $(PROGRAMS); do \
		echo "$$p"; \
	done | sort

.PHONY: list-libs
list-libs:
	@for l in $(LTLIBRARIES); do \
		echo "$$l"; \
	done | sort

.PHONY: list-modules
list-modules:
	@find . -name '*.ko' | sort | cut -c 1-2 --complement

.PHONY: help
help:
	@echo 'Build targets:'
	@echo '  all             - build programs, libraries, kernel modules, etc.,'
	@echo '                    this is a default, same as just `make`'
	@echo '  all-user        - build only user-space libraries and programs'
	@echo '  all-kernel      - build only kernel modules'
	@echo ''
	@echo '  quick           - build only user-space UT'
	@echo '  kuick           - build only kernel-space UT'
	@echo ''
	@echo '  galois          - build only libgalois.so and galois.ko'
	@echo '  libmero         - build only libmero library'
	@echo '  libmero-ut      - build only libmero-ut library'
	@echo '  libmero-altogether - build only libmero library'
	@echo ''
	@echo '  dir/file[.o]    - build specified target only'
	@echo ''
	@echo 'Cleaning targets:'
	@echo '  clean           - delete from the build tree files created by `make all`'
	@echo '  distclean       - same as clean, but additionally delete anything,'
	@echo '                    created by ./configure'
	@echo ''
	@echo 'Documentation:'
	@echo '  doc             - generate all documentation'
	@echo '  doc-doxygen     - generate doxygen documentation'
	@echo '  doc-manpages    - generate Mero manpages'
	@echo ''
	@echo 'Distribution targets:'
	@echo '  install         - install what needs to be installed, copying the'
	@echo '                    files from the build tree to system-wide directories'
	@echo '  uninstall       - the opposite of `make install` - erase installed files'
	@echo '                    (this needs to be run from the same build tree that'
	@echo '                     was installed)'
	@echo '  dist            - recreate package-version.tar.gz from all source files'
	@echo '  rpms            - build Mero rpm packages'
	@echo ''
	@echo 'Information:'
	@echo '  list-programs   - list all executables built in mero'
	@echo '  list-libs       - list all libraries built in mero'
	@echo '  list-modules    - list all kernel modules built in mero'
	@echo '  print-elf-sizes - show ELF sizes of the main binaries'


################################################################################
#                                     Misc
################################################################################

EXTRA_DIST += addb/Kbuild.sub \
              addb/ut/Kbuild.sub \
              be/Kbuild.sub \
              be/ut/Kbuild.sub \
              cob/Kbuild.sub \
              conf/Kbuild.sub \
              db/Kbuild.sub \
              dtm/Kbuild.sub \
              dtm/ut/Kbuild.sub \
              fid/Kbuild.sub \
              fol/Kbuild.sub \
              fop/Kbuild.sub \
              fop/ut/Kbuild.sub \
              ha/Kbuild.sub \
              ioservice/Kbuild.sub \
              ioservice/ut/Kbuild.sub \
              layout/Kbuild.sub \
              layout/ut/Kbuild.sub \
              lib/Kbuild.sub \
              lib/ut/Kbuild.sub \
              m0t1fs/Kbuild.sub \
              m0t1fs/linux_kernel/ut/Kbuild.sub \
              mdservice/Kbuild.sub \
              mero/Kbuild.sub \
              mgmt/Kbuild.sub \
              net/Kbuild.sub \
              net/bulk_emulation/Kbuild.sub \
              net/bulk_emulation/ut/Kbuild.sub \
              net/lnet/Kbuild.sub \
              net/lnet/st/Kbuild.sub \
              net/lnet/ut/Kbuild.sub \
              net/test/Kbuild.sub \
              net/test/ut/Kbuild.sub \
              net/ut/Kbuild.sub \
              pool/Kbuild.sub \
              reqh/Kbuild.sub \
              reqh/ut/Kbuild.sub \
              rm/Kbuild.sub \
              rm/ut/Kbuild.sub \
              rpc/Kbuild.sub \
              rpc/it/Kbuild.sub \
              rpc/ut/Kbuild.sub \
              sm/Kbuild.sub \
              sm/ut/Kbuild.sub \
              sns/Kbuild.sub \
              stats/Kbuild.sub \
              stob/Kbuild.sub \
              ut/Kbuild.sub \
              utils/Kbuild.sub \
              xcode/Kbuild.sub \
              xcode/ut/Kbuild.sub
